Mise en place du checkstyle.
