# domain-api/src/main/java/info/san/hexa/domain/core/model/pizza/Pizza.java
@@ -13,20 +13,35 @@ import java.util.HashSet;
 @Setter
 public class Pizza {
 
+    /**
+     * Les tailles des pizzas que peut fabriquer le restaurant.
+     */
     @Getter
     public enum Taille {
 
+        /**
+         * Une petite pizza.
+         */
         PETITE(BigDecimal.ONE),
 
+        /**
+         * Une pizza de taille standard.
+         */
         MOYENNE(BigDecimal.valueOf(1.5)),
 
+        /**
+         * Une grande pizza pour les gros mangeurs ou à partager.
+         */
         GRANDE(BigDecimal.valueOf(2)),
 
+        /**
+         * Quand on fait une pizza party !
+         */
         TRES_GRANDE(BigDecimal.valueOf(3));
 
         private final BigDecimal multiplicateurPrix;
 
-        Taille(BigDecimal multiplicateurPrix) {
+        Taille(final BigDecimal multiplicateurPrix) {
             this.multiplicateurPrix = multiplicateurPrix;
         }
 
@@ -43,10 +58,16 @@ public class Pizza {
 
     private Taille taille;
 
+    /**
+     * Constructeur par défaut, crée une pizza "nature".
+     */
     public Pizza() {
         this.ingredients = new HashSet<>();
     }
 
+    /**
+     * Cuit la pizza.
+     */
     public void cuire() {
         if (this.isCuite) {
             throw new PizzaDejaCuiteException("La pizza est déjà cuite, elle va être cramée !");
@@ -55,10 +76,23 @@ public class Pizza {
         this.isCuite = true;
     }
 
-    public boolean ajouterIngredient(Ingredient ingredient) {
+    /**
+     * Ajoute un ingrédient à la pizza.
+     *
+     * @param ingredient L'ingrédient à ajouter.
+     *
+     * @return {@code true} si l'ajout à était effectué, {@code false} si l'ingrédient existait déjà.
+     */
+    public boolean ajouterIngredient(final Ingredient ingredient) {
         return this.ingredients.add(ingredient);
     }
 
+    /**
+     * Récupère le prix de la pizza en ajoutant tous les prix unitaires des ingrédients et applique
+     * un multiplicateur en fonction de la taille de la pizza.
+     *
+     * @return Le prix final de la pizza.
+     */
     public BigDecimal getPrix() {
         return this.ingredients.stream()
                 .map(Ingredient::prixUnitaire)
