# rest-application/src/main/java/info/san/hexa/rest/pizza/mappers/PizzaDtoMapper.java
@@ -3,6 +3,7 @@ package info.san.hexa.rest.pizza.mappers;
 import info.san.hexa.domain.core.model.pizza.Pizza;
 import info.san.hexa.rest.api.model.NouvellePizzaDTO;
 import info.san.hexa.rest.api.model.PizzaDTO;
+import info.san.hexa.rest.api.model.PizzaModifieeDTO;
 import org.mapstruct.Mapper;
 import org.mapstruct.Mapping;
 import org.mapstruct.ValueMapping;
@@ -21,11 +22,11 @@ public interface PizzaDtoMapper {
     List<PizzaDTO> mapToDTO(List<Pizza> pizzas);
 
     @Mapping(target = "calzone", ignore = true)
-    Pizza mapToDomain(PizzaDTO dto);
-
-    @Mapping(target = "calzone", ignore = true)
     @Mapping(target = "id", ignore = true)
     Pizza mapToDomain(NouvellePizzaDTO dto);
+
+    @Mapping(target = "calzone", ignore = true)
+    Pizza mapToDomain(PizzaModifieeDTO dto);
 
     @ValueMappings(value = {
             @ValueMapping(target = "GRANDE", source = "LARGE"),
@@ -34,6 +35,14 @@ public interface PizzaDtoMapper {
             @ValueMapping(target = "TRES_GRANDE", source = "TRES_GROS_MANGEUR")
     })
     Pizza.Taille map(NouvellePizzaDTO.TailleEnum taille);
+
+    @ValueMappings(value = {
+            @ValueMapping(target = "GRANDE", source = "LARGE"),
+            @ValueMapping(target = "MOYENNE", source = "MEDIUM"),
+            @ValueMapping(target = "PETITE", source = "ENFANT"),
+            @ValueMapping(target = "TRES_GRANDE", source = "TRES_GROS_MANGEUR")
+    })
+    Pizza.Taille map(PizzaModifieeDTO.TailleEnum taille);
 
     @ValueMappings(value = {
             @ValueMapping(target = "GRANDE", source = "LARGE"),
